# bluecc

./: .gitignore  Cargo.toml  README.md  justfile  procs-bluecc.md
blueprints/: Cargo.toml
blueprints/examples/: arbiter.rs  fibonacci.rs  ping.rs  registry.rs  subscriber.rs
blueprints/src/: actors.rs  graph_meta.rs  handlers.rs  lib.rs  rules.rs  store.rs
cc-bridge/: Cargo.toml  justfile
cc-bridge/examples/: contract_storage.rs  new_task.rs  rpc_client.rs  rpc_server.rs  worker.rs
cc-bridge/src/: eth.rs  lib.rs  proposals.rs  srv_director.rs
cc-bridge/src/dispat/: models.rs
cc-data-srv/: .postgraphilerc.js  Cargo.toml  justfile  procs-cc-data-srv.md
cc-data-srv/schema/: .gitignore
cc-data-srv/src/: acl.rs  auth.rs  common.rs  handlers.rs  main.rs
cc-data-srv/src/acl/: adapters.rs  data_format.rs  permissions.rs  rbac_model.conf
cc-data-srv/src/auth/: error.rs  handlers.rs  jwt_auth.rs  user.rs
cc-pipes/: Cargo.toml
cc-pipes/src/: errors.rs  lib.rs  runner.rs  script_module.rs  srv_wrapper.rs
cc-pipes/src/kube/: ctrl.rs  descriptors.rs  mod.rs
cc-pipes/src/scripts/: simple.rhai
cc-types/: .env  Cargo.toml  diesel.toml  justfile
cc-types/src/: lib.rs  schema.rs
cc-types/src/models/: mod.rs  model_types.rs
common/: Cargo.toml
common/src/: lib.rs  params.rs
common/src/tests/: bytes_tests.rs  closures_tests.rs  data_format_tests.rs  datetime_tests.rs  enum_tests.rs  err_tests.rs  expr_tests.rs  function_map_tests.rs  io_tests.rs  json_tests.rs  mod.rs  name_tests.rs  string_tests.rs  toml_tests.rs
connectors/bluefin/: composer.py  justfile  procs-composer.md  procs-main-entity.ipynb  procs-shopping-cart.ipynb  procs-srv.ipynb  procs-web3-api.ipynb  procs-web3.ipynb  pyproject.toml
connectors/bluefin/bluefin/: __init__.py
connectors/bluefin/tests/: test_bluefin.py
contracts/cart/: .gitignore  Cargo.toml  common.rs  justfile  lib.rs
contracts/cart/catalog/: Cargo.toml  lib.rs
contracts/cart/cc_example/: Cargo.toml  calculate.rs  lib.rs
contracts/cart/cc_incs/: Cargo.toml
contracts/cart/statis/: Cargo.toml  calculate.rs  lib.rs
contracts/cart/wish_list/: Cargo.toml  lib.rs
entity-meta/: Cargo.toml
entity-meta/src/: helpers.rs  lib.rs
entity-meta/src/tests/: mod.rs  proto_tests.rs  resource_tests.rs  storage_tests.rs
entity-seed/: .env  .gitignore  .tree  Cargo.toml  cc.toml  env.sh  justfile  seed.toml
entity-seed/entitydef/: accounting-entitymodel.xml  common-entitymodel.xml
entity-seed/meta-cli/: Cargo.toml  env.sh  justfile  procs-meta-cli.md  procs-ofbiz-srvs.md
entity-seed/meta-cli/src/: data_convert.rs  generator.rs  main.rs  routines.rs  subscriber.rs
entity-seed/meta-gen/: Cargo.toml
entity-seed/meta-gen/.store/: id_store.json
entity-seed/meta-gen/src/: action_meta.rs  active_units.rs  capnp_gen.rs  capnp_outline.yml  cases.rs  chart_gen.rs  charts.rs  component_descriptor.rs  conn.rs  custom_types.rs  entity_auto_procs.rs  entity_info.rs  entity_relations.rs  exec_plan.rs  functions.rs  java_gen.rs  lib.rs  meta_conf.rs  meta_conf.toml  meta_services.rs  proto_gen.rs  query_tests.rs  requests.rs  resource_gen.rs  resources.rs  seed_gen.rs  service_gen.rs  solidity_gen.rs  srv_example.rs  srv_finders.rs  status_item.rs  user_login.rs  value_objs.rs  xml_seed.rs
entity-seed/meta-gen/test_files/: simple.yml
entity-seed/migrations/2021-03-08-023311_basic/: down.sql  up.sql
entity-seed/migrations/2021-03-08-080604_simple/: down.sql
entity-seed/migrations/2021-03-08-102618_mnemonic/: down.sql  up.sql
entity-seed/migrations/2021-03-09-120106_security/: down.sql  up.sql
entity-seed/migrations/2021-03-14-132527_example/: down.sql  up.sql
entity-seed/migrations/2021-03-14-142300_party/: down.sql  up.sql
entity-seed/migrations/2021-03-14-161428_common/: down.sql  up.sql
entity-seed/src/: database.rs  delegators.rs  errors.rs  lib.rs  meta_model.rs  models.rs  object_id.rs  schema.rs  snowflake.rs  stopwatch.rs  topo.rs  util.rs
entity-seed/src/blues/: filesys.rs  mod.rs
entity-seed/src/cases/: mod.rs  security.rs
entity-seed/src/cli/: git.rs  meta_cli.rs
entity-seed/src/delegators/: generic_delegator.rs
entity-seed/src/kube/: mod.rs
entity-seed/src/meta/: ExampleFeatureForms.xml  app_context.rs  basic_models.rs  cc.toml  cc_conf.rs  cell_tests.rs  collection_tests.rs  data_files.z  data_files_procs.rs  entity_xml_parse_tests.rs  entity_xml_tests.rs  fieldtypemysql.xml  fieldtypepostgres_saas.xml  form_parsers.rs  globals.rs  linq_tests.rs  meta_tests.rs  mod.rs  model_revisions.rs  model_revs.toml  model_tests.rs  regex_tests.rs  requests.rs  resource_loader.rs  scale_tests.rs  security_procs.rs  seed.rs  seed_conf.rs  serializer_tests.rs  service_models.rs  sql_tests.rs  string_tests.rs  template_builder.rs  template_tests.rs  yml_tests.rs
entity-seed/src/models/: common.rs  common_types.rs  enum_types.rs  example.rs  example_types.rs  model_types.rs  party.rs  party_types.rs  security.rs  security_types.rs
entity-seed/src/tests/: ExampleForms.xml  app_context.rs  askama_tests.rs  basic_models.rs  cell_tests.rs  entity_xml_parse_tests.rs  entity_xml_tests.rs  entitymodel_example.xml  fieldtypemysql.xml  fieldtypepostgres.xml  form_parsers.rs  functor_tests.rs  kvdb_tests.rs  meta_tests.rs  mod.rs  redis_tests.rs  regex_tests.rs  resource_loader.rs  sample.rs  seed.rs  seed_conf.rs  seed_gen.rs  service_models.rs  simple.xml  sql_tests.rs  (+4 more)
meta-server/: Cargo.toml
meta-srv/: Cargo.toml
meta-srv/src/: charts.rs  lib.rs  meta_graph.rs  state_charts.rs
modules/mod-common/: .env  Cargo.toml  diesel.toml
reader/: Cargo.toml  test.env
reader/src/: main.rs  todos.rs
sectors/: Cargo.toml  build.rs  justfile
sectors/calculator/: Cargo.toml  justfile  main.rs  test_client_and_server.bash
sectors/hello-world/: Cargo.toml  client.rs  main.rs  server.rs
sectors/protocols/: filesys.capnp  test_ents.capnp  workflows.capnp
sectors/src/: lib.rs  subsys.rs
srv-dele/: Cargo.toml
stubs/: Cargo.toml
stubs/examples/: syn_trace.rs  syn_visit.rs
stubs/src/: lib.rs  utils.rs
(+160 files in other folders)
