[workspace]
members = [
	"common",
    "entity-seed",
	"stubs",
    "reader",
    "learn",
	"meta-server",
    "functor",
	"cc-types",
	"modules/mod-common",
    "modules/sample-books",
    "modules/sample-posts",
    "modules/all-about-inserts",
    "modules/advanced-blog-cli",
    "contracts/cc_common",
]

[profile.release]
panic = "abort"
lto = true

