[workspace]
members = [
	"common",
    "entity-seed",
	"cc-types",
	"cc-pipes",
	"cc-data-srv",
	"cc-agent",
	"deles",
	"cc-bridge",
	"meta-srv",
	"blueprints",
    "contracts/cc_common",
    "entity-seed/meta-gen",
    "entity-seed/meta-cli",
]
exclude = ["contracts/cc_common", "contracts/cart"]

[profile.release]
panic = "abort"
lto = true

