[package]
name = "cc-data-srv"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deles = { package="deles", version = "0.1.0",  path = "../deles"}

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"
thiserror = "1.0"
lazy_static = "1.4.0"
Inflector = "0.11.4"

serde = "1.0"
serde_json = "1.0.11"
serde_derive = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }
bigdecimal = { version = ">= 0.0.10, < 0.2.0", features=["serde"] }

tokio = { version = "1", features = ["macros", "full"] }
warp = "0.3"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
branch = "master"
features=["serde-support", "postgresql", "pooled", "bigdecimal", "json"]
