[package]
name = "cc-pipes"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"

decimal = {package="rust_decimal", version="1.10.3", features=["serde-str"]}
chrono = { version = "0.4.0", features = ["serde"] }

serde = "1.0"
serde_json = "1.0.11"
serde_derive = "1.0"

tokio = { version = "1", features = ["macros", "full"] }
#tempfile = "3.1.0"
warp = "0.3"
pretty_env_logger = "0.4"
toml = "0.5.8"

rhai = {version="0.19.13", features=["serde", "sync"]}

kube = { version = "^0.51.0" }
kube-derive = { version = "^0.51.0", default-features = false } # only needed to opt out of schema
kube-runtime = { version = "^0.51.0", default-features = false }
k8s-openapi = { version = "0.11.0", features = ["v1_20"], default-features = false }

log = "0.4"
env_logger = "0.8.3"
