[package]
name = "cc-types"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }
thiserror = "1.0"
lazy_static = "1.4.0"

diesel = { version = "1.4", features = ["postgres", "serde_json", "chrono", "r2d2", "numeric"] }
diesel_full_text_search = "1.0.0"
dotenv = "0.10.0"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
# doesn't require singularize, pluralize, class, table, demodulize, deconstantize.
Inflector = {version="*", default-features=false}
toml = "0.5.8"
chrono = "0.4"

bigdecimal = "0.2.0"
env_logger = "0.8.3"
tera = "1.6.1"

[dev-dependencies]
tempfile = "3.1.0"
assert_matches = "1.1"
diesel_migrations = { version = "1.4", features = ["postgres"] }
lazy_static = "1.0"
