[package]
name = "common"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
# Expr supports deserialization using the serde library to make flexible configuration easy to set up,
# if the feature serde is enabled (disabled by default).
meval = {version="0.2", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
# doesn't require singularize, pluralize, class, table, demodulize, deconstantize.
Inflector = {version="*", default-features=false}
toml = "*"
chrono = "0.4"

