[package]
name = "entity-seed"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"
regex = "1"

decimal = {package="rust_decimal", version="1.10.3", features=["serde-str"]}
chrono = { version = "0.4.0", features = ["serde"] }
#lazy-static-include = "3.0.5"

#scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive", "full"] }
#derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
#scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
#cfg-if = "1.0"
#array-init = { version = "1.0" }

#kvdb = "0.9.0"
#kvdb-rocksdb = { version = "0.11.0", optional = true }
#kvdb-memorydb = "0.9.0"
#linked-hash-map = "0.5.2"

#common = { version = "0.1.0", path = "../common"}
#functor = { package="linq", version="0.0.1-release", path="../functor"}
#serde-xml-rs = "0.4.1"
serde-xml-rs = { git = "https://github.com/tobz1000/serde-xml-rs", branch = "out-of-order-elements", package = "serde-xml-rs" }
#askama = { version = "0.10", default-features = false, features = ["with-warp", "mime", "mime_guess"] }
#askama = "0.10"

serde_yaml = "0.8"
log = "0.4"
serde = "1.0"
serde_json = "1.0.11"
serde_derive = "1.0"
xml-rs = "0.8.0"
roxmltree = "0.14.0"
structmap = "0.1.0"
structmap-derive = "0.1.3"
thiserror = "1.0"
lazy_static = "1.4.0"
# tokio + rustls
#sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls","mysql" ] }
#redis = { version = "0.20.0", features = ["tls"] }
rand = "0.8.1"
hex = "0.4.2"
tera = "1.6.1"
# doesn't require singularize, pluralize, class, table, demodulize, deconstantize.
Inflector = {version="0.11.4", default-features=false}
phf = { version = "0.8", features = ["macros"] }

zip = { version = "0.5.10", default-features = false }
walkdir = "2.3.1"
#quaint = {version="0.2.0-alpha.13", features=["serde-support", "full-mysql", "pooled"]}
#quaint = {version="0.2.0-alpha.13", features=["serde-support", "single-postgresql", "full-mysql", "pooled"]}
#quaint = {version="0.1", features=["full-postgresql", "full-mysql", "pooled"]}

#tokio = { version = "0.2.25", features = ["macros", "time"] }
#tokio = { version = "1", features = ["macros", "net", "signal", "io-std", "io-util", "rt-multi-thread", "fs", "sync", "time"]}
#tokio = { version = "1", features = ["macros", "full"] }
tokio = { version = "1", features = ["macros", "time"] }
#tempfile = "3.1.0"
warp = "0.3"
pretty_env_logger = "0.4"

#reqwest = { version = "0.10", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "1.4", features = ["postgres", "serde_json", "chrono", "r2d2", "numeric", "64-column-tables"] }
diesel_full_text_search = "1.0.0"
dotenv = "0.10.0"
bcrypt = "0.2.0"
#byteorder = "1.4.2"
tempfile = "3.1.0"
toml = "0.5.8"
#bigdecimal = "0.2.0"
bigdecimal = { version = ">= 0.0.10, < 0.2.0", features=["serde"] }
env_logger = "0.8.3"
glob = "0.3.0"
#error-chain = "0.12.4"
flate2 = "1.0"
envmnt = "0.9.0"
time = "0.2.26"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
branch = "master"
features=["serde-support", "postgresql", "mysql", "pooled", "bigdecimal", "json"]

[dev-dependencies]
simple_logger = "1.0.1"
docmatic = "0.1.2"
tempfile = "3.1.0"
ethereum-types = "*"
assert_matches = "1.1"
diesel_migrations = { version = "1.4", features = ["postgres"] }
lazy_static = "1.0"

[[bin]]
name = "seed"
path = "src/meta/seed.rs"
