[package]
name = "meta-server"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "authentication-client"
path = "src/authentication/client.rs"

[[bin]]
name = "authentication-server"
path = "src/authentication/server.rs"


[dependencies]
tonic = {version="0.4.0", features = ["tls"] }
prost = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = { version = "0.4" }
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.7"
# Hyper example
hyper = "0.14"
warp = { git = "https://github.com/seanmonstar/warp",  default-features = false }
http = "0.2"
http-body = "0.4"
pin-project = "1.0"

[build-dependencies]
tonic-build = { version="0.4.0", features = ["prost"] }

