[package]
name = "meta-srv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { package="entity-seed", version = "0.1.0",  path = "../entity-seed"}
meta_gen = {package="meta-gen", version = "0.1.0",  path = "../entity-seed/meta-gen"}

rocket = "0.4.7"
rand = "0.6"
