[package]
name = "meta-srv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { package="entity-seed", version = "0.1.0",  path = "../entity-seed"}
meta_gen = {package="meta-gen", version = "0.1.0",  path = "../entity-seed/meta-gen"}

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"
thiserror = "1.0"
lazy_static = "1.4.0"
Inflector = "0.11.4"

rocket = "0.4.7"
rand = "0.6"
calamine = "0.18.0"
petgraph = { version = "0.5"}
#machine = "0.3"

rust-fsm = { version = "0.5", features = ["dsl"] }
