[package]
name = "reader"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
#sqlx = { version="*", features = [ "mysql", "runtime-async-std-rustls" ] }
sqlx = { version = "0.5.1", features = [ "runtime-async-std-native-tls","mysql" ] }
structopt = { version = "0.3", features = [ "paw" ] }
