[package]
name = "srv-dele"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
# doesn't require singularize, pluralize, class, table, demodulize, deconstantize.
Inflector = {version="0.11.4", default-features=false}
toml = "0.5.8"
chrono = "0.4"

