[package]
name = "bluecc_stubs"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

[lib]
name = "bluecc_stubs"

[dependencies]
quote = "1"
syn = { version = "1.0", features = ["parsing", "full", "fold", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
itertools = "0.10"
either = { version = "1.5", default-features = false }
regex = "1.3"
blake2 = "0.9"
heck = "0.3.1"
scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive", "full"] }
impl-serde = "0.3.1"

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std"
]

