[tool.poetry]
name = "bluefin"
version = "0.1.0"
description = "bluefin package"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
