[package]
name = "cart"
version = "0.1.0"
authors = ["bluecc <xiaofei.wu@gmail.com>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

ink_prelude = { version = "3.0.0-rc3", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[dev-dependencies]
bstr = "0.2.15"

[lib]
name = "cart"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "serde",
    "serde_json",
    "anyhow",
]
ink-as-dependency = []
