[package]
name = "meta-cli"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { package="entity-seed", version = "0.1.0",  path = "../../entity-seed"}
meta_gen = {package="meta-gen", version = "0.1.0",  path = "../meta-gen"}
deles = { package="deles", version = "0.1.0",  path = "../../deles"}

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"
thiserror = "1.0"
lazy_static = "1.4.0"
Inflector = "0.11.4"

serde = "1.0"
serde_json = "1.0.11"
serde_derive = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }

reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros", "time"] }

colored = "2"
dialoguer = "0.8.0"
console = "0.14.1"

roxmltree = "0.14.0"
tera = "1.6.1"
prettytable-rs = "^0.6"
envy = "0.3"
