[package]
name = "meta-gen"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { package="entity-seed", version = "0.1.0",  path = "../../entity-seed"}
deles = { version = "0.1.0",  path = "../../deles"}

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"
thiserror = "1.0"
error-chain = "0.12.2"
lazy_static = "1.4.0"

serde = "1.0"
serde_json = "1.0.11"
serde_derive = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }

diesel = { version = "1.4", features = ["postgres", "serde_json", "chrono", "r2d2", "numeric"] }
# bigdecimal = { version = ">= 0.0.10, < 0.2.0", features=["serde"] }
bigdecimal = { version = "0.2", features=["serde"] }

roxmltree = {version="0.14.0", features=["std"]}
#serde-xml-rs = "0.4.1"
serde-xml-rs = { git = "https://github.com/tobz1000/serde-xml-rs", branch = "out-of-order-elements", package = "serde-xml-rs" }
bcrypt = "0.2.0"
Inflector = "0.11.4"

reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros", "time"] }
base64 = "0.13.0"
bstr = "0.2.15"
serde_repr = "0.1.6"

tera = "1.6.1"
envmnt = "0.9.0"
ron = "0.6.4"
serde_yaml = "0.8"
#linked-hash-map = {version="0.5.4", features=["serde"]}
