[package]
name = "mod-common"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

[[test]]
name = "all"
path = "src/tests/all.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4.0", features = ["serde"] }

warp = "0.3"
log = "0.4"

diesel = { version = "1.4", features = ["postgres", "serde_json", "chrono", "r2d2"] }
diesel_full_text_search = "1.0.0"
dotenv = "0.15"
flate2 = "1.0"
futures-channel = { version = "0.3.1", default-features = false }
futures-util = "0.3"

parking_lot = "0.11"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
scheduled-thread-pool = "0.2.0"
semver = { version = "0.10", features = ["diesel", "serde"] }
sentry = "0.22"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
sha2 = "0.9"
tar = "0.4.16"
tempfile = "3"
tokio = { version = "1", features = ["net", "signal", "io-std", "io-util", "rt-multi-thread", "fs", "sync", "time"]}
tokio-stream = "0.1.1"
tokio-util = { version = "0.6", features = ["io"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.1"

[dev-dependencies]
pretty_env_logger = "0.4"
tracing-subscriber = "0.2.7"
tracing-log = "0.1"

claim = "0.4.0"
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
lazy_static = "1.0"
tower-service = "0.3.0"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.1", features = ["net"] }

[build-dependencies]
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
