[package]

name = "hello-world"
version = "0.0.0"
authors = [ "Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"  ]
edition = "2018"

build = "build.rs"

[[bin]]
name = "hello-world"
path = "main.rs"

[build-dependencies]
capnpc = { version="0.14" }

[dependencies]
capnp = { version="0.14" }
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.6.0", features = ["compat"] }

[dependencies.capnp-rpc]
version = "0.14"