[package]
name = "cc_example"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
#statis = {path="../statis"}
cc_incs= {version="0.1.0", path="../cc_incs", default-features = false}

ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

ink_prelude = { version = "3.0.0-rc3", default-features = false }

decimal = {package="rust_decimal", version="1.10.3", default-features = false}
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
#average = { version ="0.12.0", default-features = false}
#float-ord = "0.3"
integer-sqrt = "0.1.5"
indexmap = { version = "1.6.2", default-features = false}

[lib]
name = "cc_example"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "ink_prelude/std",
    "decimal/std",
    "chrono/std",
    "indexmap/std",
    "cc_incs/std",
]
ink-as-dependency = []
