[package]
name = "cc_incs"
version = "0.1.0"
edition = "2018"

[lib]
name = "cc_incs"
path = "src/lib.rs"
#crate-type = [
#	# Used for normal contract Wasm blobs.
#	"cdylib",
#]

[dependencies]
#ink_prelude = { version = "3.0.0-rc3", default-features = false }
#scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
#scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3.1"

[features]
default = ["std"]
std = [
#    "ink_prelude/std",
#    "scale/std",
#    "scale-info/std",
]