[package]
name = "cc_incs"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>", "Joseph Richey", "Sergei Shulepov"]
include = ["src/**/*.rs", "Cargo.toml"]
description = "Common functions for ink contracts"
readme = "README.md"
keywords = ["ink"]
categories = ["no-std"]
license = "Apache-2.0/MIT"

[lib]
name="cc_incs"
path="src/lib.rs"
#crate-type = ["staticlib"]

#[dependencies.cfg-if]
#version = "1.0"

[dependencies]
ink_prelude = { version = "3.0.0-rc3", default-features = false }

[dependencies.num-traits]
version = "0.2"
default-features = false

[features]
default = ["std"]
std = []
